--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "gulp-less": "^3.0.3",
     "gulp": "^3.9.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp-babel": "^5.3.0",
+    "gulp-react": "^3.1.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "gulp && node lib/app.js"
+    "start": "gulp && node lib/app.js"
   },
   "author": "",
   "license": "ISC"
