--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "",
   "main": "lib/app.js",
   "dependencies": {
-    "express": "^4.13.3",
-    "gulp-less": "^3.0.3",
-    "gulp": "^3.9.0"
+    "express": "^4.13.3"
   },
   "devDependencies": {
+    "gulp-less": "^3.0.3",
+    "gulp": "^3.9.0",
     "gulp-babel": "^5.3.0",
     "gulp-react": "^3.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "gulp && node lib/app.js"
+    "start": "npm install && gulp && node lib/app.js"
   },
   "author": "",
   "license": "ISC"
