--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "lib/app.js",
   "dependencies": {
-    "express": "^4.13.3"
-  },
-  "devDependencies": {
+    "express": "^4.13.3",
     "gulp-less": "^3.0.3",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.3.0",
@@ -14,7 +12,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm install && gulp && node lib/app.js"
+    "build": "gulp",
+    "start": "node lib/app.js"
   },
   "author": "",
   "license": "ISC"
