--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "gulp",
-    "start": "node lib/app.js"
+    "start": "gulp && node lib/app.js"
   },
   "author": "",
   "license": "ISC"
