--- a/package.json
+++ b/package.json
@@ -4,15 +4,31 @@
   "description": "",
   "main": "lib/app.js",
   "dependencies": {
+    "body-parser": "^1.14.1",
+    "bytes": "^2.1.0",
+    "config": "^1.16.0",
+    "content-type": "^1.0.1",
+    "crypto": "0.0.3",
+    "debug": "^2.2.0",
+    "depd": "^1.1.0",
     "express": "^4.13.3",
-    "gulp-less": "^3.0.3",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.3.0",
-    "gulp-react": "^3.1.0"
+    "gulp-less": "^3.0.3",
+    "gulp-react": "^3.1.0",
+    "http-errors": "^1.3.1",
+    "iconv-lite": "^0.4.13",
+    "mongoose": "^4.1.11",
+    "mongoose-class-wrapper": "^0.5.0",
+    "nodemailer": "0.7.1",
+    "on-finished": "^2.3.0",
+    "qs": "^5.2.0",
+    "raw-body": "^2.1.4",
+    "type-is": "^1.6.9"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "gulp && node lib/app.js"
+    "start": "gulp && export NODE_ENV=production && node --harmony_destructuring lib/app.js"
   },
   "author": "",
   "license": "ISC"
