--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "body-parser": "^1.14.1",
     "bytes": "^2.1.0",
-    "captcha": "0.0.4",
+    "canvas": "^1.2.11",
     "config": "^1.16.0",
     "content-type": "^1.0.1",
     "cookie-parser": "^1.4.0",
