--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "gulp": "^3.9.0",
     "gulp-babel": "^5.3.0",
     "gulp-less": "^3.0.3",
+    "gulp-minify-css": "^1.2.1",
     "gulp-react": "^3.1.0",
+    "gulp-uglify": "^1.4.2",
     "http-errors": "^1.3.1",
     "iconv-lite": "^0.4.13",
     "mongoose": "^4.1.11",
